contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/lz_contract/fail/not_a_struct.stderr
error: custom attribute panicked
 --> tests/ui/lz_contract/fail/not_a_struct.rs:3:1
  |
3 | #[common_macros::lz_contract]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: failed to parse struct: expected `struct`
